ShoesListFragment.kt - Add RecyclerView

--- a/app/src/main/res/layout/fragment_shoes_list.xml
+++ b/app/src/main/res/layout/fragment_shoes_list.xml
@@ -5,14 +5,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context=".ui.shoes.list.ShoesListFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:itemCount="10"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_shoe"
+        tools:orientation="vertical"
+        tools:scrollbars="vertical" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:layout_marginEnd="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="64dp"
         android:contentDescription="@string/desc_add_shoe"
         android:src="@drawable/ic_add"
