--- a/app/src/main/res/layout/fragment_shoes_list.xml
+++ b/app/src/main/res/layout/fragment_shoes_list.xml
@@ -9,19 +9,15 @@ is more efficient with it.-->
     android:layout_height="match_parent"
     tools:context=".ui.shoes.list.ShoesListFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="10"
-        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_shoe"
-        tools:orientation="vertical"
-        tools:scrollbars="vertical" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
