--- a/app/src/main/res/layout/fragment_shoe_details.xml
+++ b/app/src/main/res/layout/fragment_shoe_details.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="viewModel"
+            type="com.udacity.shoestore.ui.shoes.ShoesViewModel" />
+
         <variable
             name="shoe"
-            type="com.udacity.shoestore.models.Shoe"/>
+            type="com.udacity.shoestore.models.Shoe" />
     </data>
 
     <androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.shoes.details.ShoeDetailsFragment">
@@ -42,7 +47,8 @@
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
                     android:inputType="text"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:text="@={shoe.name}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -60,7 +66,8 @@
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
                     android:inputType="text"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:text="@={shoe.company}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -78,7 +85,8 @@
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:text="@={shoe.size}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -96,7 +104,8 @@
                     android:layout_height="wrap_content"
                     android:imeOptions="actionDone"
                     android:inputType="text"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:text="@={shoe.description}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -106,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
+                android:onClick="@{() -> viewModel.onBtnSaveClick()}"
                 android:text="@string/save" />
 
             <Button
@@ -114,6 +124,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
+                android:onClick="@{() -> viewModel.onBtnCancelClick()}"
                 android:text="@string/cancel"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
